runtime/pavex_macros/tests/pre_process/fail/not_a_function.stderr
error: #[pavex::pre_process] can only be applied to functions and methods.
 --> tests/pre_process/fail/not_a_function.rs:7:5
  |
7 |     const A: usize = 42;
  |     ^^^^^^^^^^^^^^^^^^^^
